--- a/src/main/resources/templates/findBands.html
+++ b/src/main/resources/templates/findBands.html
@@ -2,6 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="includes :: indexHead"></head>
 <body>
+<div th:include="navbar :: nav"></div>
 
+<span th:include="includes :: js"></span>
 </body>
 </html>
