--- a/src/main/resources/templates/includes.html
+++ b/src/main/resources/templates/includes.html
@@ -3,18 +3,32 @@
 <head th:fragment="indexHead">
     <meta charset="UTF-8"/>
     <title>Title</title>
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap-material-design/4.0.2/dist/bootstrap-material-design.min.css}"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{/webjars/materialize/0.100.2/dist/css/materialize.min.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/styles.css}"/>
 </head>
 <body>
 
 <span th:fragment="js">
-    <script th:src="@{/webjars/bootstrap-material-design/4.0.2/dist/bootstrap-material-design.iife.min.js}"></script>
-        <script th:src="@{/webjars/bootstrap-material-design/4.0.2/dist/bootstrap-material-design.umd.js.map}"></script>
-    <script>
-         $(document).ready(function() {
-             $('.mdb-select').material_select();
-         });
-    </script>
+<script th:src="@{/webjars/jquery/3.2.1/dist/jquery.js}"></script>
+<script th:src="@{/webjars/materialize/0.100.2/dist/js/materialize.min.js}"></script>
+<script>
+      $(document).ready(function(){
+          // the "href" attribute of the modal trigger must specify the modal ID that wants to be triggered
+          $('.modal').modal();
+      });
+      $(document).ready(function() {
+          $('select').material_select();
+      });
+      $('.datepicker').pickadate({
+          selectMonths: true, // Creates a dropdown to control month
+          selectYears: 15, // Creates a dropdown of 15 years to control year,
+          today: 'Today',
+          clear: 'Clear',
+          close: 'Ok',
+          closeOnSelect: false // Close upon selecting a date,
+      });
+</script>
 </span>
 </body>
 </html>
