--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -13,12 +13,12 @@
         </ul>
         <nav>
             <div class="blue nav-wrapper">
-                <a href="#!" class="brand-logo">gigFinder</a>
+                <a href="/" class="brand-logo">gigFinder</a>
 
                 <ul class="right hide-on-med-and-down">
                     <li><a th:href="@{/gigfinder/find-gigs}">Find a Gig</a></li>
                     <li><a th:href="@{/gigfinder/find-bands}">Find a Band</a></li>
-                    <li><a class="modal-trigger" href="#modal1">Sign In</a></li>
+                    <li><a href="/login">Sign In</a></li>
                     <!-- Dropdown Trigger -->
                     <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
                 </ul>
