--- a/src/main/resources/templates/companyProfile.html
+++ b/src/main/resources/templates/companyProfile.html
@@ -5,11 +5,19 @@
 <div th:include="navbar :: nav"></div>
 
 <main class="container">
-<h1>Company Profile</h1>
+    <h1>Company Profile</h1>
     <div class="divider"></div>
     <div>
-        <div class="hoverable" th:each="gig :: ${gig}">
-            <h4 th:text="${gig.gigDescription}"></h4>
+        <div class="hoverable" th:each="gig : ${gig}">
+            <div class="container">
+                <h4 th:text="${gig.gigDescription}"></h4>
+                <p th:text="'Start: ' + ${gig.gigStart}"></p>
+                <p th:text="'End: ' + ${gig.gigEnd}"></p>
+                <p th:text="${gig.gigType}"></p>
+                <p th:text="${gig.gigLocation}"></p>
+                <div id="googleMap" style="width:100%;height:400px;"></div>
+            </div>
+
         </div>
     </div>
 </main>
