homepage almost complete route auth done

--- a/src/main/resources/templates/createGig.html
+++ b/src/main/resources/templates/createGig.html
@@ -33,10 +33,20 @@
 
             </div>
         </div>
+        <div class="file-field input-field">
+            <div class="btn">
+                <span>File</span>
+                <input type="file"/>
+            </div>
+            <div class="file-path-wrapper">
+                <input th:field="*{gigArt}" class="file-path validate" type="text"/>
+            </div>
+        </div>
         <button class="waves-effect waves-light btn" type="submit" >Create Gig</button>
 
     </form>
 </main>
+<div th:include="footer :: footer"></div>
 
 
 <span th:include="includes :: js"></span>
