--- a/src/main/resources/templates/findBands.html
+++ b/src/main/resources/templates/findBands.html
@@ -3,6 +3,7 @@
 <head th:include="includes :: indexHead"></head>
 <body>
 <div th:include="navbar :: nav"></div>
+<div th:include="footer :: footer"></div>
 
 <span th:include="includes :: js"></span>
 </body>
