--- a/src/main/resources/templates/musicianDetails.html
+++ b/src/main/resources/templates/musicianDetails.html
@@ -5,6 +5,7 @@
 <div th:include="navbar :: nav"></div>
 <span th:include="includes :: js"></span>
 
+<div th:include="footer :: footer"></div>
 
 <span th:include="includes :: js"></span>
 </body>
