--- a/src/main/resources/static/assets/css/styles.css
+++ b/src/main/resources/static/assets/css/styles.css
@@ -1,3 +1,75 @@
 .tabs .indicator {
     text-decoration: none;
     background-color: red !important; }
+#logo{
+    font-size: 5em;
+}
+.top{
+
+    background-image: url("/assets/images/microphone_wallpaper copy.jpg");
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+.brand-logo{
+    font-family: 'Great Vibes', cursive;
+    margin-left: 15px;
+}
+.login{
+    background: url("/assets/images/pexelsJazz.jpeg");
+    box-shadow:inset 0 0 0 2000px rgba(21, 60, 101, 0.3);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 100vh;
+}
+.loginForm{
+
+background: rgba(255,255,255,0.5);
+
+}
+.top .card{
+    border: 1px solid white;
+}
+.sect2 .material-icons, .sect3 .material-icons{
+    font-size: 5em;
+    padding: 10px;
+    border: 1px solid #FD6D22;
+    border-radius: 50%;
+}
+.musicianBanner{
+    background: url("/assets/images/pexelsDJ.jpeg");
+    box-shadow:inset 0 0 0 2000px rgba(44, 152, 240, 0.3);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 50vh;
+}
+.companyBanner{
+    background: url("/assets/images/weddingHarp.jpg");
+    box-shadow:inset 0 0 0 2000px rgba(44, 152, 240, 0.3);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 50vh;
+}
+.bannerTitle{
+    color:#FFF;
+}
+
+.bannerTitle:hover{
+    color:#FD6D22;
+}
+.gigArt{
+   height: 200px;
+}
+.localGigs{
+    height: 75px;
+}
+.musicProfile{
+    margin: 0px 35px;
+}
+.name{
+    text-transform: uppercase;
+}
