--- a/src/main/resources/templates/companyProfile.html
+++ b/src/main/resources/templates/companyProfile.html
@@ -11,18 +11,20 @@
         <div class="hoverable" th:each="gig : ${gig}">
             <div class="container">
                 <a th:href="'/home/gig/' + @{${gig.id}}">
-                <h4 th:text="${gig.gigDescription}"></h4>
-                <p th:text="'Start: ' + ${gig.gigStart}"></p>
-                <p th:text="'End: ' + ${gig.gigEnd}"></p>
-                <p th:text="${gig.gigType}"></p>
-                <p th:text="${gig.gigLocation}"></p>
-                    <img th:src="${url}" alt=""/>
-                    <!--<div id="googleMap" style="width:100%;height:400px;"></div>-->
+                    <h4 th:text="${gig.gigDescription}"></h4>
+                    <p th:text="'Start: ' + ${gig.gigStart}"></p>
+                    <p th:text="'End: ' + ${gig.gigEnd}"></p>
+                    <p th:text="${gig.gigType}"></p>
+                    <p th:text="${gig.gigLocation}"></p>
+
                 </a>
+
             </div>
         </div>
+
     </div>
 </main>
+<div th:include="footer :: footer"></div>
 
 <span th:include="includes :: js"></span>
 </body>
