--- a/src/main/resources/templates/findGigs.html
+++ b/src/main/resources/templates/findGigs.html
@@ -4,18 +4,37 @@
 <body>
 <div th:include="navbar :: nav"></div>
 <main class="container">
-    <div class="hoverable" th:each="gig : ${gig}">
-        <div class="container">
-            <a th:href="'/home/gig/' + @{${gig.id}}">
+    <div class="" th:each="gig : ${gig}">
+        <div class="section ">
+            <div class="row">
+                <div class="col s3">
+                    <img class="gigArt" th:src="${gig.gigArt}" alt=""/>
+                </div>
+            <div class="col s9">
                 <h4 th:text="${gig.gigDescription}"></h4>
-                <p th:text="'Start: ' + ${gig.gigStart}"></p>
-                <p th:text="'End: ' + ${gig.gigEnd}"></p>
-                <p th:text="${gig.gigType}"></p>
-                <p th:text="${gig.gigLocation}"></p>
-            </a>
+                <h5 th:text="'When: ' + ${gig.gigStart}"></h5>
+                <h5 th:text="'Where: '+${gig.gigLocation}"></h5>
+                <div class="row">
+                    <div class="col s9">
+                        <h5 th:text="'Type: '+${gig.gigType}"></h5>
+
+                    </div>
+                    <div class="col s3">
+                        <a class="btn" th:href="'/musician/gig/' + @{${gig.id}}">Apply</a>
+
+                    </div>
+
+                </div>
+                </div>
+
+            </div>
+
+
         </div>
+        <div class="divider"></div>
     </div>
 </main>
+<div th:include="footer :: footer"></div>
 
 <span th:include="includes :: js"></span>
 </body>
