--- a/src/main/resources/templates/includes.html
+++ b/src/main/resources/templates/includes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>gigFinder</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Pacifico" rel="stylesheet"/>
     <link rel="stylesheet" th:href="@{/webjars/materialize/0.100.2/dist/css/materialize.min.css}"/>
     <link rel="stylesheet" th:href="@{/assets/css/styles.css}"/>
 </head>
@@ -40,11 +41,13 @@
           },
           minLength: 1, // The minimum length of the input for the autocomplete to start. Default: 1.
       });
-
+      $(document).ready(function(){
+          $('.scrollspy').scrollSpy();
+      });
 
 </script>
 
-
+<script th:src="@{/assets/js/main.js}"></script>
 </span>
 </body>
 </html>
