--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,12 +3,114 @@
 <head th:include="includes :: indexHead"></head>
 <body>
 <div th:include="navbar :: nav"></div>
-<main class="container">
-    <h1 class="">Is this working</h1>
-    <a class="waves-effect waves-light btn modal-trigger" href="#signupModal">Sign In</a>
+<main>
+    <section class="top valign-wrapper section scrollspy" id="top">
+        <div class="container">
+            <div class="choice center-align">
+                <h1 class="brand-logo white-text" id="logo">gigFinder</h1>
+                <div class="row">
+                    <div class="col s6">
+                        <div class="card medium sticky-action hoverable">
+                            <div class="card-image waves-effect waves-block waves-light">
+                                <img class="activator" th:src="@{../assets/images/pexels-guitar.jpeg}"/>
+                            </div>
+                            <div class="card-content musicCard">
+                                <span class="card-title activator grey-text text-darken-4">I'm a Musician<i class="material-icons right">more_vert</i></span>
+                            </div>
+                            <div class="card-action">
+                                <a href="/signup/musician/" class="btn">Sign Up</a>
+                            </div>
+                            <div class="card-reveal">
+                                <span class="card-title grey-text text-darken-4">I'm a Musician<i class="material-icons right">close</i></span>
+                                <p>
+                                    <ul>
+                                <li>I'm looking for a gig</li>
+                                <li>I want to network with other musicians</li>
+                                <li>I need to get my name out there</li>
+                            </ul>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s6">
+                        <div class="card medium sticky-action hoverable">
+                            <div class="card-image waves-effect waves-block waves-light">
+                                <img class="activator" th:src="@{../assets/images/smallVenue.jpg}"/>
+                            </div>
+                            <div class="card-content bookCard">
+                                <span class="card-title activator grey-text text-darken-4">I Book Musicians<i class="material-icons right">more_vert</i></span>
+                            </div>
+                            <div class="card-action ">
+                                <a href="/signup/company/" class="btn ">Sign Up</a>
 
-    <div th:include="buttons :: buttons"></div>
+                            </div>
+                            <div class="card-reveal">
+                                <span class="card-title grey-text text-darken-4">I Book Musicians<i class="material-icons right">close</i></span>
+                                <p>
+                                <ul>
+                                    <li>I need help booking musicians</li>
+                                    <li>I need to advertise playing opportunities for my venue</li>
+                                </ul>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+    <div class="musicianBanner">
+        <a href="#top">
+            <h1 class="center-align bannerTitle">Don't miss out on another gig again!</h1>
+
+        </a>
+    </div>
+    <section class="sect2 blue white-text ">
+        <div class="row">
+            <div class="col s4 center-align">
+                <i class="orange accent-4 material-icons">location_searching</i>
+                <p>Find</p>
+                <p>A simple way to find your next gig</p>
+            </div>
+            <div class="col s4 center-align">
+                <i class="orange accent-4 material-icons">share</i>
+                <p>Share</p>
+                <p>Share you music for those looking for musicians</p>
+            </div>
+            <div class="col s4 center-align">
+                <i class=" orange accent-4 material-icons">person_pin</i>
+                <p>Network</p>
+                <p>Keep in touch or find new musicians</p><p> to collab with wherever you are</p>
+            </div>
+        </div>
+
+    </section>
+    <div class="companyBanner">
+        <a href="#top"><h1 class="bannerTitle center-align">Don't lose time finding music for your event!</h1></a>
+    </div>
+    <section class="sect3 center-align">
+        <div class="row">
+            <div class="col s6">
+                <i class=" orange accent-4 material-icons">local_activity</i>
+
+                <p>Promote</p>
+                <p>Advertise your venue to musicians and other companies </p>
+            </div>
+            <div class="col s6">
+                <i class=" orange accent-4 material-icons">star</i>
+
+                <p>Find</p>
+                <p>Find the right musicians for your event</p>
+            </div>
+
+        </div>
+    </section>
+
 </main>
+<div th:include="footer :: footer"></div>
 <div th:include="modals :: signupModal"></div>
 <span th:include="includes :: js"></span>
 </body>
