--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="includes :: indexHead"></head>
-<body>
+<body class="login">
 <div class="container">
-    <h1>LOGIN</h1>
-    <div style="color: red;" th:text="${error}"></div>
+    <div class="row">
+        <div class="col s8">
+            <h1 class="brand-logo white-text" id="logo">gigFinder</h1>
 
-    <form th:action="@{/login}" th:object="${user}" method="post">
-        <input type="text" th:field="*{username}" placeholder="Username"/>
-        <input type="password" th:field="*{password}" placeholder="Password"/>
-        <button class="waves-effect waves-light btn" type="submit" >Login</button>
-    </form>
-    <a class="waves-effect waves-light btn modal-trigger" href="#signupModal">Sign In</a>
+        </div>
+        <div class="loginForm col s4">
+            <h1>LOGIN</h1>
+            <div style="color: red;" th:text="${error}"></div>
+
+            <form th:action="@{/login}" th:object="${user}" method="post">
+                <input type="text" th:field="*{username}" placeholder="Username"/>
+                <input type="password" th:field="*{password}" placeholder="Password"/>
+                <button class="waves-effect waves-light btn" type="submit" >Login</button>
+            </form>
+        </div>
+    </div>
+
 
 </div>
 <div th:include="modals :: signupModal"></div>
